css fixes for navbar-top aboutme section overflowing

--- a/index.css
+++ b/index.css
@@ -41,9 +41,16 @@ a {
 .navbar-top {
   background-color: #222;
   width: 100%;
-  height: 200px;
-  position: fixed;
+  min-height: 220px;
+  position: absolute;
   top: 0;
+}
+
+.navbar-top p, .navbar-top sub {
+  /*float: right;*/
+  padding-bottom: 5px;
+  top: 75px;
+  left: 100px;
 }
 
 .navbar-top img {
@@ -74,21 +81,6 @@ a {
   margin: 5px 0px 5px 10px;
 }
 
-.navbar .about-me {
-  position: absolute;
-  bottom: 20px;
-}
-
-.navbar .about-me p {
-  margin-top: 15px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.navbar-top .about-me {
-  left: 155px;
-}
-
 .content-right {
   margin: 0 5% 0 25%;
   width: 70%;
@@ -96,7 +88,7 @@ a {
 
 .content-bottom {
   width: 90%;
-  margin: 210px 5% 0px 5%;
+  margin: 230px 5% 0px 5%;
 }
 
 .jumbotron {
